# anime-image-viewer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  Taskfile.docker.yml  Taskfile.yml  config.example.toml  go.mod  go.sum  main.go  pluginctl-config.example.toml
.github/claude/: pr-review-prompt.md
.github/workflows/: claude-review.yml  frontend.yml  go.yml  publish-binary.yml
cmd/aivcli/: main.go
cmd/pluginctl/: main.go
docs/: TODO.md  development.md  hugo.toml
docs/content/: _index.md  development.md  todo.md
docs/ux-redesign/: frontend-design.md  ux-design.md
frontend/: .eslintrc.cjs  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.e2e.ts  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/__tests__/: RootErrorPage.test.tsx  image-url.test.ts  jest.setup.ts  main.test.tsx  test-utils.tsx  tsconfig.json
frontend/e2e/: image-urls.spec.ts  wails-runtime-mock.ts
frontend/eslint-rules/: no-raw-css-values.js
frontend/src/: App.tsx  DirectoryExplorer.tsx  Layout.tsx  RootErrorPage.tsx  main.tsx  vite-env.d.ts
internal/anilist/: client.go  client_test.go  types.go
internal/anime/: anilist_import.go  anilist_import_test.go  anime.go  main_test.go  service.go  service_test.go
internal/backup/: backup.go  backup_test.go  restore.go  restore_test.go  types.go
internal/config/: config.development.go  config.production.go  reader.go  reader_test.go  serfice.go  service.go
internal/db/: anime.go  anime_test.go  character.go  character_test.go  client.go  client_test.go  directories.go  errors.go  files.go  files_test.go  tags.go  tags_test.go  testing.go  testing_test.go  transaction.go  transaction_test.go
internal/export/: export.go  export_test.go
internal/frontend/: anilist_types.go  anime.go  anime_test.go  backup.go  backup_test.go  character.go  character_test.go  config.go  config_test.go  directory.go  directory_test.go  error.go  explorer_unix.go  explorer_windows.go  file.go  file_test.go  image.go  image_service_test.go  image_test.go  import.go  import_test.go  main_test.go  search.go  search_test.go  tag.go  tag_test.go
internal/image/: assets.go  dimensions.go  dimensions_test.go  directories.go  directories_test.go  directory_reader.go  directory_reader_test.go  export.go  files.go  files_test.go  hash.go  hash_test.go  main_test.go  resizer.go  resizer_test.go  scanner.go  scanner_test.go  tag_suggestion.go  tag_suggestion_test.go  tags.go  tags_test.go  testing.go  testing_test.go  validator.go  validator_test.go
internal/import_images/: batch_images.go  batch_images_test.go  batch_tag.go  batch_tag_test.go  main_test.go  progress_notifier_test.go  validate_test.go  xmp.go  xmp_test.go
plugins/tag-suggestion/: .env  .gitignore  README.md  pyproject.toml
plugins/tag-suggestion/src/: ImageProcessor.py  grpc_client.py  grpc_server.py  inference.py  main.py  preprocess.py  tag.py  test_config.py  test_preprocess.py  tools.py  train.py
plugins/tag-suggestion/testdata/: tags.json
plugins/tag-suggestion/testdata/train/: metadata.jsonl
testdata/: image.jpg.xmp  image.png.xmp  xmp_invalid_format.xml.xmp
(+278 files in other folders)
